--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
     <title>Birthday Party Invite</title>
     <style>
     /* Base Styles */
+
     body {
-        background: linear-gradient(135deg, #000057, #7A00A2, #FF0047); /* Trilinear gradient */
+        background: linear-gradient(135deg, #000057, #7A00A2, #FF0047); 
         background-size: cover;
         color: white;
-        font-family: Comic Sans MS, sans-serif;
+        font-family: 'EMcomic', Comic Sans MS, sans-serif;
         margin: 0;
         padding: 0;
     }
@@ -280,6 +281,14 @@
         75% { color: blue; }
         100% { color: red; }
     }
+    @font-face {
+        font-family: 'EMcomic';
+        src: url('fonts/EMcomic-Regular.woff2') format('woff2'),
+            url('fonts/EMcomic-Regular.woff') format('woff');
+        font-weight: normal;
+        font-style: normal;
+    }
+
 
     .flashing {
         animation: flash 1s infinite;
@@ -468,4 +477,3 @@
 
 </body>
 </html>
-
