--- a/public/index.html
+++ b/public/index.html
@@ -51,10 +51,10 @@
         padding: 15px;
         background-color: rgba(0, 0, 0, 0.8);
         background-image: url(background.jpg);
-        background-position: center; /* Center the background image */
-        background-repeat: repeat; /* Prevent the image from repeating */
+        background-position: center;
+        background-repeat: repeat;
         background-size: 90%;
-        border: 2px solid #FF0047; /* Brighter border to match the trilinear theme */
+        border: 2px solid #FF0047; 
         border-radius: 8px;
         box-shadow: 0px 0px 10px rgba(255, 0, 71, 0.7);
         text-align: center;
@@ -63,15 +63,15 @@
     /* Flex container for images */
     .profile-images {
         display: flex;
-        justify-content: center; /* Center the images horizontally */
-        align-items: center; /* Vertically align the images in the center */
-        gap: 20px; /* Add some space between images */
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
         margin-bottom: 20px;
-        flex-wrap: wrap; /* Wrap images on smaller screens */
+        flex-wrap: wrap;
     }
 
     .profile-box {
-        width: 100px; /* Smaller width for mobile */
+        width: 80px;
         border: 3px solid #ff00dd;
         padding: 10px;
         margin: 10px;
@@ -81,17 +81,17 @@
 
     .profile-box img {
         width: 100%;
-        border-radius: 5px; /* Rounded corners for the image */
+        border-radius: 5px;
         border: 2px solid #555;
     }
 
     h2 {
-        color: #FF0047; /* Accent color for the headings */
-        font-size: 2em; /* Adjusted for mobile screens */
+        color: #FF0047;
+        font-size: 2em;
     }
 
     .blurb {
-        background-color: rgba(121, 0, 162, 0.651); /* Slightly muted magenta for blurbs */
+        background-color: rgba(121, 0, 162, 0.651);
         padding: 20px;
         color: #fff;
         margin-bottom: 20px;
@@ -102,7 +102,7 @@
     }
 
     footer {
-        background: linear-gradient(90deg, #000057, #7A00A2, #FF0047); /* Trilinear footer */
+        background: linear-gradient(90deg, #000057, #7A00A2, #FF0047);
         padding: 15px;
         color: #fff;
         font-size: 0.8em;
@@ -118,7 +118,7 @@
         margin-bottom: 10px;
         background-color: #FF0047;
         color: #fff;
-        width: 90%; /* Full width for input and button on smaller screens */
+        width: 100%;
     }
 
     button {
@@ -141,33 +141,33 @@
         color: white;
     }
     #clown-mirror {
-        transform:scaleX(-1);
+        transform: scaleX(-1);
     }
 
     /* Flex container for style and wishlist images */
     .style-images, .wishlist-images {
         display: flex;
-        justify-content: space-around; /* Space between images */
+        justify-content: space-around;
         align-items: center;
-        flex-wrap: wrap; /* Wrap images on smaller screens */
+        flex-wrap: wrap;
         margin-bottom: 20px;
         gap: 20px;
     }
 
     /* Style box for images with borders */
     .style-box, .wishlist-box {
-        width: 150px; /* Adjust width */
+        width: 120px;
         border: 3px solid #ff00dd;
         padding: 10px;
         margin: 10px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
         text-align: center;
     }
-    /* Enlarge image on hover */
+
     .style-box img:hover, .wishlist-box img:hover {
-        transform: scale(1.5); /* Increases the size of the image */
-        z-index: 10; /* Makes sure the enlarged image appears above other content */
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7); /* Add a shadow around the image */
+        transform: scale(1.5);
+        z-index: 10;
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.7);
     }
 
     .style-box img, .wishlist-box img {
@@ -179,101 +179,77 @@
         display: inline-flex;
         width: 50px;
     }
+
+    /* GIF styling */
     .top-gif {
         display: flex;
-        justify-content: center; /* Center the GIFs horizontally */
-        align-items: center;     /* Align the GIFs vertically */
-        gap: 10px;               /* Add space between the GIFs */
-        margin-bottom: 20px;     /* Add space below the GIFs */
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 20px;
     }
-    #playlist {
-        background-image: url(star.gif);
-        background-size: 40%;
-    }
-    .top-gif img {
-        width: 5%;            /* Adjust the size of the GIFs */
-        height: auto;
-        border-radius: 5px;      /* Optional: Add some rounded corners */
-    }
+
     #bigger-gif {
-        width: 15%;             /* Make this specific GIF bigger */
+        width: 15%;
     }
+
     #phone {
         display: inline-flex;
         width: 22px;
     }
+
     #arrow {
         display: inline-flex;
         transform: rotate(-90deg);
         width: 18px;
     }
 
-    @media screen and (max-width: 768px) {
-        .top-gif img {
-            width: 100px;        /* Adjust the size of the GIFs for smaller screens */
-        }
-    }
-
-    /* Media Query for screens smaller than 768px (Tablets & Mobile) */
-    @media screen and (max-width: 768px) {
+    /* Media Query for iPhone Screens */
+    @media screen and (max-width: 428px) {
         header {
-            font-size: 2em; /* Smaller font size for header */
+            font-size: 1.8em;
+            padding: 15px;
         }
 
         h2 {
-            font-size: 1.5em; /* Smaller heading size */
+            font-size: 1.5em;
         }
 
         nav a {
-            font-size: 1em; /* Smaller nav links */
-            padding: 8px; /* Adjusted padding */
-        }
-
-        .profile-images {
-            flex-direction: column; /* Stack images vertically on mobile */
-            align-items: center;
+            font-size: 1em;
+            padding: 8px;
         }
 
         .profile-box {
-            width: 80px; /* Reduce image size for mobile */
-        }
-
-        input, button {
-            width: 100%; /* Full width on mobile */
-        }
-
-        .container {
-            width: 95%; /* Narrower container for mobile */
-        }
-    }
-
-    /* Media Query for screens smaller than 480px (Small Mobile) */
-    @media screen and (max-width: 480px) {
-        header {
-            font-size: 1.8em; /* Even smaller font size for header */
-        }
-
-        h2 {
-            font-size: 1.2em; /* Smaller heading size */
-        }
-
-        nav a {
-            font-size: 0.9em; /* Smaller nav links */
-        }
-
-        .profile-box {
-            width: 60px; /* Further reduce image size for small screens */
+            width: 60px;
         }
 
         .blurb {
-            font-size: 1em; /* Adjust blurb text size */
-            padding: 10px; /* Reduce padding */
+            font-size: 1em;
+            padding: 15px;
         }
 
-        input, button {
-            font-size: 0.9em; /* Smaller text size for inputs and buttons */
+        .container {
+            padding: 10px;
+        }
+
+        .style-box, .wishlist-box {
+            width: 100px;
+        }
+
+        #bigger-gif {
+            width: 30%;
+        }
+
+        .top-gif img {
+            width: 10%;
+        }
+
+        .compass-icon {
+            width: 40px;
         }
     }
+
     @keyframes flash {
         0% { color: red; }
         25% { color: yellow; }
@@ -281,6 +257,7 @@
         75% { color: blue; }
         100% { color: red; }
     }
+
     @font-face {
         font-family: 'EMcomic';
         src: url('fonts/EMcomic-Regular.woff2') format('woff2'),
@@ -289,28 +266,12 @@
         font-style: normal;
     }
 
-
     .flashing {
         animation: flash 1s infinite;
     }
     </style>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Form submission handler
-            document.getElementById("confirm-form").addEventListener("submit", function (event) {
-                event.preventDefault();
-                
-                // Show confirmation message
-                const message = document.getElementById("confirmation-message");
-                message.textContent = "Presença Confirmada!!!";
-                message.style.display = "block";
-                
-                // Add flashing effect
-                message.classList.add("flashing");
-            });
-        });
-
         // Function to switch between tabs
         function showTab(tabName) {
             var tabs = document.querySelectorAll('.tab-content');
