--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     }
 
     nav {
+        display: flex; /* Ensures buttons are in a horizontal row */
+        justify-content: center; /* Center the tabs horizontally */
+        gap: 10px; /* Adds space between the buttons */
         background: linear-gradient(90deg, #7A00A2, #FF0047); /* Gradient across the navigation */
         padding: 15px;
         text-align: center;
