--- a/public/index.html
+++ b/public/index.html
@@ -252,6 +252,7 @@
             width: 40px;
         }
     }
+        
 
     @keyframes flash {
         0% { color: red; }
@@ -318,7 +319,7 @@
             <section class="blurb">
                 <h3>Convite Especial</h3>
                 <p>Caros amigos, Temos o prazer de convidá-los para uma ocasião muito especial!
-                 No dia 21 de setembro de 2024, a partir das 19h, estaremos reunidos para celebrar momentos inesquecíveis. 
+                 No dia 21 de setembro de 2024, a partir das 9:30pm, estaremos reunidos para celebrar momentos inesquecíveis. 
                  O local será a Chácara da Família, onde haverá música, boa comida e muita diversão! 
                  Contamos com a presença de todos para tornar essa noite ainda mais memorável. Por favor, confirmem sua presença no final da página até o dia 20 de setembro <img id="arrow" src="Home/Arrow_L.gif">. <br>Esperamos vocês com muita alegria! Com carinho, Gabriel.
                 </p>
@@ -338,7 +339,9 @@
             <section class="blurb">
                 <form id="confirm-form" action="/submit" method="POST">
                     <h3>Confirme sua presença pelo WhatsApp:</h3>
-                    <h1><a class="flashing" href="https://wa.me/19788968947" target="_blank">(978) 896-8947<img id="phone" src="Home/phone.gif"></a></h1>
+                    <h1><a class="flashing" href="https://api.whatsapp.com/send?phone=19788968947&text=%F0
+                            %9F%8E%89%20Estou%20confirmado(a)!%20%F0%9F%8E%89%0AVou%20estar%20l%C3%A1%20para%20curtir%20a%20vibe%20dos%20anos%202000%20com%20
+                            voc%C3%AAs!%20Nos%20vemos%20no%20dia%2021%2C%20%C3%A0s%209%3A30%20pm!!!" target="_blank">(978) 896-8947<img id="phone" src="Home/phone.gif"></a></h1>
                 </form>             
             </section>
         </div>
