--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
                 <h3>Convite Especial</h3>
                 <p>Caros amigos, Temos o prazer de convidá-los para uma ocasião muito especial!
                  No dia 21 de setembro de 2024, a partir das 9:30pm, estaremos reunidos para celebrar momentos inesquecíveis. 
-                 O local será a Chácara da Família, onde haverá música, boa comida e muita diversão! 
+                 O local será no Clube Português, onde haverá música, boa comida e muita diversão! 
                  Contamos com a presença de todos para tornar essa noite ainda mais memorável. Por favor, confirmem sua presença no final da página até o dia 20 de setembro <img id="arrow" src="Home/Arrow_L.gif">. <br>Esperamos vocês com muita alegria! Com carinho, Gabriel.
                 </p>
             </section>
