--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
                 <h3>Convite Especial</h3>
                 <p>Caros amigos, Temos o prazer de convidá-los para uma ocasião muito especial!
                  No dia 21 de setembro de 2024, a partir das 9:30pm, estaremos reunidos para celebrar momentos inesquecíveis. 
-                 O local será no Clube Português, onde haverá música, boa comida e muita diversão! 
+                 O local será no Clube do Português, onde haverá música, boa comida e muita diversão! 
                  Contamos com a presença de todos para tornar essa noite ainda mais memorável. Por favor, confirmem sua presença no final da página até o dia 20 de setembro <img id="arrow" src="Home/Arrow_L.gif">. <br>Esperamos vocês com muita alegria! Com carinho, Gabriel.
                 </p>
             </section>
@@ -328,7 +328,7 @@
             <section class="blurb">
                 <h3>Quando & Onde</h3>
                 <p>Data: 21 de Setembro, <br>
-                    2024 Local: Bar do Português 
+                    2024 Local: Clube do Português 
                     <a class="map" href="https://www.google.com/maps?q=512+Central+St,+Lowell,+MA+01852" target="_blank">
                         512 Central St, Lowell, MA 01852
                     </a>
