--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                 <p>Caros amigos, Temos o prazer de convidá-los para uma ocasião muito especial!
                  No dia 21 de setembro de 2024, a partir das 9:30pm, estaremos reunidos para celebrar momentos inesquecíveis. 
                  O local será no Clube do Português, onde haverá música, boa comida e muita diversão! 
-                 Contamos com a presença de todos para tornar essa noite ainda mais memorável. Por favor, confirmem sua presença no final da página até o dia 20 de setembro <img id="arrow" src="Home/Arrow_L.gif">. <br>Esperamos vocês com muita alegria! Com carinho, Gabriel.
+                 Contamos com a presenca de todos para tornar essa noite ainda mais memorável. Por favor, confirmem sua presença no final da página até o dia 20 de setembro <img id="arrow" src="Home/Arrow_L.gif">. <br>Esperamos vocês com muita alegria! Com carinho, Gabriel.
                 </p>
             </section>
 
@@ -338,7 +338,7 @@
 
             <section class="blurb">
                 <form id="confirm-form" action="/submit" method="POST">
-                    <h3>Confirme sua presença pelo WhatsApp:</h3>
+                    <h3>Confirme sua presenca pelo WhatsApp clicando no LINK abaixo:</h3>
                     <h1><a class="flashing" href="https://api.whatsapp.com/send?phone=19788968947&text=Confirmad%C3%ADssimo(a)!%20%3A-D%20%20%0AVou%20t%C3%A1%20l%C3%A1%20pra%20curtir%20a%20vibe%20dos%20anos%202000%20com%20voc%C3%AAs!%20Nos%20vemos%20no%20dia%2021%2C%20%C3%A0s%209%3A30%20pm!" target="_blank">
                         (978) 896-8947<img id="phone" src="Home/phone.gif"></a></h1>
                 </form>             
