--- a/public/index.html
+++ b/public/index.html
@@ -339,7 +339,7 @@
             <section class="blurb">
                 <form id="confirm-form" action="/submit" method="POST">
                     <h3>Confirme sua presenca pelo WhatsApp clicando no LINK abaixo:</h3>
-                    <h1><a class="flashing" href="https://api.whatsapp.com/send?phone=19788968947&text=Confirmad%C3%ADssimo(a)!%20%3A-D%20%20%0AVou%20t%C3%A1%20l%C3%A1%20pra%20curtir%20a%20vibe%20dos%20anos%202000%20com%20voc%C3%AAs!%20Nos%20vemos%20no%20dia%2021%2C%20%C3%A0s%209%3A30%20pm!" target="_blank">
+                    <h1><a class="flashing" href="https://w.app/21W7ot" target="_blank">
                         (978) 896-8947<img id="phone" src="Home/phone.gif"></a></h1>
                 </form>             
             </section>
@@ -431,6 +431,8 @@
                     <div class="wishlist-box"><img src="wishlist/8.jpeg" alt="Wishlist Item 8"></div>
                     <div class="wishlist-box"><img src="wishlist/9.jpeg" alt="Wishlist Item 9"></div>
                     <div class="wishlist-box"><img src="wishlist/10.jpeg" alt="Wishlist Item 10"></div>
+                    <div class="wishlist-box"><img src="wishlist/10.jpeg" alt="Wishlist Item 11"></div>
+                    <div class="wishlist-box"><img src="wishlist/10.jpeg" alt="Wishlist Item 12"></div>
                 </div>
             </div>
         </div>
